@@ -104,6 +104,7 @@ Version 1.5
  - Pull Request #981 - Added support for GE 12721 Lighting Control Duplex Receptacle from ThomasADavis (Nechry)
  - Pull Request #980 - Update manufacturer_specific.xml from bailz (Nechry)
  - Add GR GR105 Auto Valve config file (Nechry)
+ - Add NodOn MSP-3-1-XX Micro Smart Plug from sarakha63 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
